Changelog
=========

All notable changes to this project will be documented in this file.

The format is based on `Keep a Changelog <http://keepachangelog.com/>`_
and this project adheres to `Semantic Versioning <http://semver.org/>`_


UNRELEASED VERSION
------------------

0.3.8 - 2018-06-04
------------------

Added
~~~~~

- Methods to retrieve the DICOM header dump using the dcmdump service. This
  can be used via services.dicom_dump(uri) or experiment.dicom_dump to get the
  dump of the specific experiment

Fixed
~~~~~

- Strict username checking after login disabled to avoid problems with OIDC
- Fix a bug where token result would contain extra data

0.3.7 - 2018-03-12
------------------

Fixed
~~~~~

- Fixed a bug where the prompt for the password on Windows would not work

Changed
~~~~~~~

- Hide certificate warnings if verify=False, just give a one time warning that
  things might not be safe, but no spam at every single request

0.3.6 - 2018-03-09
------------------

Added
~~~~~

- Support for issuing tokens in the service module

Fixed
~~~~~

- Allow user to login using a token (the username check will catch this an allow it)

Changed
~~~~~~~

- Improved the logging by reducing spam at the INFO/DEBUG levels. The debug parameter
  on connect can now be used to enable the logging of xnatpy internals.
- Give a specific error if the XNAt password is outdated and requires an update.

0.3.5 - 2018-01-02
------------------

Fixed
~~~~~

- There were bugs in the prearchive breaking the entire pre-archive funcationaly

0.3.4 - 2017-11-13
------------------

Fixed
~~~~~

- Files in assessors would have a path prefixed with a / in some cases (which should never happen)

0.3.3 - 2017-10-18
------------------

Changed
~~~~~~~

- Abstracted the progress bar for downloading to allow other progress hooks (e.g. GUI)

Fixed
~~~~~

- Set proper minimal versions for requirements (e.g. six can be too old)
- Bug in upload for Python3